--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,5 @@
+@import './colors.scss';
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -5,3 +7,7 @@
     font-size: 24px;
     font-family: sans-serif;
 }
+
+// body {
+//     background-color: $main-blue;
+// }
