--- a/src/components/layout/Container/Container.module.scss
+++ b/src/components/layout/Container/Container.module.scss
@@ -3,5 +3,5 @@
 .container {
     max-width: 1200px;
     margin: 0 auto;
-    background-color: $main-blue;
+    //background-color: $main-blue;
 }
