--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -7,7 +7,17 @@
     display: flex;
     justify-content: space-between;
     
-    h1 {
+    h1  {
         margin-left: 20px;
+
+        span {
+            margin-left: 10px;
+        }
+    }
+}
+
+@media screen and (max-width: 350px) {
+    h1 > span  {
+        display:  none;
     }
 }
