--- a/src/components/layout/Navbar/Navbar.module.scss
+++ b/src/components/layout/Navbar/Navbar.module.scss
@@ -1,13 +1,16 @@
 @import '../../../styles/colors.scss';
 
-.navbarul {
-    display: flex;
+.navBarDiv {
+    position: relative;
+}
 
+.navBarUl {
+    display: flex;
     list-style: none;
     a {
         text-decoration: none;
         color: $text-dark-gray;
-        margin-right: 10px;
+        margin-right: 25px;
         font-size: 20px;
 
         &:hover {
@@ -15,23 +18,31 @@
         }
 
         &.active {
-            color: rgb(3, 35, 68);
+            color: rgb(174, 163, 6);
         }
     }
 }
 
-.fasun {
+.menuDiv {
     display: none;
 }
 
 
 
 @media screen and (max-width: 700px) {
-    .navbarul {
+
+    .navBarUl {
         display: none;
     }
 
-    .fasun {
+    .menuDiv:hover .navBarUl {
+        display: flex;
+    }
+
+    .menuDiv {
+        margin-right: 20px;
         display: block;
+        cursor: pointer;
+        padding: 5px;
     }
 }
