--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,11 +1,13 @@
 @import './colors.scss';
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,800;1,400;1,800&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-size: 24px;
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 // body {
